--- a/cli/vagrant/Vagrantfile.j2
+++ b/cli/vagrant/Vagrantfile.j2
@@ -11,6 +11,11 @@ Vagrant.configure("2") do |config|
     }
   end
 
+  config.vm.provider "virtualbox" do |v|
+    v.memory = 6144
+    v.cpus = 8
+  end
+
   config.vm.network "forwarded_port", guest: 8043, host: 8043
 
   config.vm.synced_folder "{{ context_dir }}", "/vagrant", disabled: false
