--- a/cli/vagrant/Vagrantfile.j2
+++ b/cli/vagrant/Vagrantfile.j2
@@ -17,6 +17,7 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.network "forwarded_port", guest: 8043, host: 8043
+  config.vm.network "forwarded_port", guest: 2222, host: 2222
 
   config.vm.synced_folder "{{ context_dir }}", "/vagrant", disabled: false
 end
